--- a/css/estilos.css
+++ b/css/estilos.css
@@ -153,6 +153,46 @@ p1                       /*    letra negra a la izq */ {
   /* otros*/
 }
 
+/*/////////////carrusel de imagenes/////////////*/
+/*//////////////////////////////////////////////*/
+.slider-frame {
+	width: 600px;
+    height: auto;
+	margin:50px auto 0;
+	overflow: hidden;
+}
+
+.slider-frame ul {
+	display: flex;
+	padding: 0;
+	width: 400%;
+	
+	animation: slide 20s infinite alternate ease-in-out;
+}
+
+.slider-frame li {
+	width: 100%;
+	list-style: none;
+}
+
+.slider-frame img {
+	width: 100%;
+}
+
+@keyframes slide {
+	0% {margin-left: 0;}
+	20% {margin-left: 0;}
+	
+	25% {margin-left: -100%;}
+	45% {margin-left: -100%;}
+	
+	50% {margin-left: -200%;}
+	70% {margin-left: -200%;}
+	
+	75% {margin-left: -300%;}
+	100% {margin-left: -300%;}
+}
+
 /* //////////////////// menu hamburguesa//////////////////////////////  */
 
 .cabezera {
