depuro atributos css

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -16,32 +16,6 @@
   box-shadow: -1px 1px 7px 1px rgba(0, 0, 0, 0.75);
 }
 
-.carrusel {
-  height: 50vh;
-  display: flex;
-  align-items: center;
-}
-
-.carrusel-items {
-  display: flex;
-  overflow-x: hidden;
-  overflow-y: hidden;
-  padding: 30px 0;
-}
-.carrusel-item {
-  min-width: 300px;
-  max-width: 300px;
-  height: 200px;
-  outline: 2px solid black;
-  cursor: pointer;
-}
-.carrusel-item:hover {
-  transform: scale(1, 2);
-}
-.carrusel-item img {
-  height: 100%;
-  width: 100%;
-}
 
 h1                     /*   titulo principal  */
  {
@@ -50,7 +24,7 @@ h1                     /*   titulo principal  */
   /* texto*/
   font-weight: bold;
   font-size: 30px;
-  text-align: center;
+  
   /* visual*/
   color: black;
   /* otros*/
@@ -61,7 +35,7 @@ h2                    /*    titulo secundario  */ {
   /* texto*/
   font-weight: bold;
   font-size: 20px;
-  text-align: center;
+
   /* visual*/
   color: black;
   /* otros*/
@@ -72,22 +46,12 @@ h3                    /* titulo equipos especificos a la izquierda    */ {
   /* texto*/
   font-weight: bold;
   font-size: 15px;
-  text-align: center;
+
   /* visual*/
   color: green;
   /* otros*/
 }
-#titulo_principal {
-  /*posicion*/
-  /* box model*/
-  /* texto*/
-  font-weight: bold;
-  font-size: 30px;
-  text-align: center;
-  /* visual*/
-  color: blue;
-  /* otros*/
-}
+
 body {
   /*posicion*/
   margin: 20px;
@@ -120,9 +84,12 @@ html {
 }
 
 .footer {
-  width: 100%;
-  background-color: #0769e9;
-  height: auto;
+  background-color: #112c50;
+    color: rgb(16, 224, 27);
+    height: auto;
+    width: 100%;
+    bottom: 0;
+    left: 0;
 }
 
 p3                        /* letra roja a la izq    */ {
@@ -196,7 +163,7 @@ p1                       /*    letra negra a la izq */ {
 /* //////////////////// menu hamburguesa//////////////////////////////  */
 
 .cabezera {
-  background-color: #0769e9;
+  background-color: #112c50;
   height: 80px;
   position: fixed;
   width: 100%;
@@ -209,14 +176,14 @@ p1                       /*    letra negra a la izq */ {
   margin: 0 auto;
 }
 .contenedor-link {
-  color: white;
+  color: rgb(16, 224, 27);
   text-decoration: none;
 }
 .logo {
   font-size: 30px;
   font-weight: bold;
-  padding: 0 40px;
-  line-height: 80px;
+  padding: 0 60px;
+  line-height: 40px;
 }
 .contenedor-menu {
   display: flex;
@@ -224,8 +191,8 @@ p1                       /*    letra negra a la izq */ {
   list-style: none;
 }
 .contenedor-menu-item {
-  font-size: 18px;
-  margin: 0 10px;
+  font-size: 12px;
+  margin: 0 5px;
   line-height: 80px;
   text-transform: uppercase;
   width: max-content;
@@ -236,7 +203,7 @@ p1                       /*    letra negra a la izq */ {
 }
 .contenedor-menu-link:hover,
 .contenedor-menu-link_active {
-  background-color: #034574;
+  background-color: #112c50;
   transition: 0.5s;
 }
 
@@ -272,9 +239,13 @@ p1                       /*    letra negra a la izq */ {
   }
 
   .footer {
-    width: 100%;
-    background-color: #0769e9;
+    
+    background-color: #112c50;
+    color: rgb(16, 224, 27);
     height: auto;
+    width: 100%;
+    bottom: 0;
+    left: 0;
   }
 
   .logo {
@@ -287,7 +258,7 @@ p1                       /*    letra negra a la izq */ {
     flex-direction: column;
     align-items: center;
     margin: 0;
-    background-color: #2c3e50;
+    background-color: #112c50;
     position: fixed;
     top: 60px;
     width: 100%;
