--- a/css/estilos.css
+++ b/css/estilos.css
@@ -282,7 +282,8 @@ p1                       /*    letra negra a la izq */ {
   background-color: red;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 768px) 
+{
   body {
     padding: 70px;
   }
@@ -409,9 +410,12 @@ p1                       /*    letra negra a la izq */ {
     max-height: 300px;
   
   }
-.mapa{
-  max-width: 100%;
-  max-height: 300px;
+
+  .mapa
+  {
+    max-width: 100%;
+    max-height: 300px;
+  }
 }
 
-}
+
