--- a/css/estilos.css
+++ b/css/estilos.css
@@ -418,7 +418,7 @@ p1                       /*    letra negra a la izq */ {
   }
 }
 
-/*///////////////////////////////////////////////////////////*/
+/*/////////////////////////////  login  //////////////////////////////*/
 
 .cabeza {
   /*background-image: url("../img/1.jpg");*/
